mplayer (2:1.1.1+r37401-1) UNRELEASED; urgency=medium

  * Import new mplayer version (svn r37401)
  * Import new ffmpeg version (2.6.2)
  * Drop spelling-errors.patch (merged upstream)

 -- Robbie Harwood (frozencemetery) <rharwood@club.cc.cmu.edu>  Sat, 16 May 2015 20:48:52 -0400

mplayer (2:1.1.1+r37381-3) unstable; urgency=medium

  * Harden buildflags
  * Override lintian false-positives
  * Patch other errors from lintian
  * Bump standards version from 3.9.2 to 3.9.6
  * Patch desktop and menu files from lintian
  * Fix and forward hyphen/minus confusion in man pages
  * Link as-needed to reduce unneeded dependencies
  * Drop mplayer-gui and put desktop features in normal mplayer

 -- Robbie Harwood (frozencemetery) <rharwood@club.cc.cmu.edu>  Sat, 16 May 2015 20:48:40 -0400

mplayer (2:1.1.1+r37381-1) unstable; urgency=medium

  * New maintainer (Closes: #763826)
  * Upload to unstable
  * Update dependencies (ffmpeg, svga)
  * Ignore ffmpeg's debian/ stuff
  * Disable currently-broken HURD patch for now
  * Imported Upstream version 1.1.1+r37381

 -- Robbie Harwood (frozencemetery) <rharwood@club.cc.cmu.edu>  Sat, 28 Mar 2015 21:55:30 -0400

mplayer (2:1.0~rc4.dfsg1+svn34540-1) unstable; urgency=low

  * New upstream snapshot
  * upload to unstable

 -- Reinhard Tartler <siretart@tauware.de>  Thu, 12 Jan 2012 22:23:28 +0100

mplayer (2:1.0~rc4.dfsg1+svn34492-3) experimental; urgency=low

  * Build against external libmpeg2
  * drop 51_FTBFS_arm.patch again

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 09 Jan 2012 22:23:38 +0100

mplayer (2:1.0~rc4.dfsg1+svn34492-2) experimental; urgency=low

  * no longer build depend on libcdparanoia-dev on the Hurd
  * Fix FTBFS on the hurd.
    Thanks to Samuel Thibault <sthibault@debian.org> (Closes: #654974)
  * Fix FTBFS on arm

 -- Reinhard Tartler <siretart@tauware.de>  Sun, 08 Jan 2012 14:25:45 +0100

mplayer (2:1.0~rc4.dfsg1+svn34492-1) experimental; urgency=low

  [ Rico Tzschichholz ]