@@ -1,5 +1,4 @@
 23mplayer-debug-printf.patch
-desktopisms.patch
 hyphen-minus.patch
 desktop-nogui.patch
 man-errors.patch
