@@ -3,6 +3,7 @@ mplayer (2:1.1.1+r37401-1) UNRELEASED; urgency=medium
   * Import new mplayer version (svn r37401)
   * Import new ffmpeg version (2.6.2)
   * Drop spelling-errors.patch (merged upstream)
+  * Drop deskopisms.patch (merged upstream)
 
  -- Robbie Harwood (frozencemetery) <rharwood@club.cc.cmu.edu>  Sat, 16 May 2015 20:48:52 -0400
 
